fixed visibility bug on mobile-view

--- a/frontend/src/components/nav/style.css
+++ b/frontend/src/components/nav/style.css
@@ -40,6 +40,12 @@ nav{
         padding: 0.5em 1.5em;
         border-radius: var(--borderRadius);
       }
+
+      @media(max-width: 768px){ 
+        > .dropdown, >a{
+          display: none
+        }
+      }
     }
   }
 
@@ -59,18 +65,6 @@ nav{
         input{
           font-size: 14px;
         }
-    }
-  }
-}
-
-@media(max-width: 768px){
-  nav{
-    .nav-container{
-      > ul{
-        .dropdown, >a{
-          display: none
-        }
-      }
     }
   }
 }
